# emnv_ctl_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
Tools/: help_func.sh
config/: drone_X280.yaml  drone_config.yaml  drone_gazebo_iris.yaml  share_topic.yaml
docs/: Code.md  Gazebo_px4.md  Px4_Compile.md  Real_Env.md  connect2x.md  env.md  guide.md  ploy_traj.md  readme.md  环境配置.md
include/control_for_gym/: FSM.hpp  Px4AttitudeController.hpp  ctrl_bridge.hpp  derivative.hpp  hover_thrust_ekf.hpp  linear_controller.hpp  mavros_utils.hpp  my_math.hpp
include/ctrl_bridge/: FSM.hpp  Px4AttitudeController.hpp  ctrl_bridge.hpp  hover_thrust_ekf.hpp  linear_controller.hpp  mavros_utils.hpp  params_parse.hpp
include/emnv_ctl_bridge/: FSM.hpp  Px4AttitudeController.hpp  hover_thrust_ekf.hpp  linear_controller.hpp  mavros_utils.hpp  params_parse.hpp
include/emnv_ctl_bridge/poly_traj/: polynomial_traj.hpp
launch/: Test_posy.yaml  ctrl_bridge.launch  ctrl_bridge_gazebo.launch  ctrl_bridge_gazebo_simulation.launch  gazebo_simulation.launch  sitl_ctrl_bridge.launch  uav_ctrl.launch
launch/gazebo/: 1simple_gazebo_test.launch  2gazebo_traj_test.launch  3gazebo_lemniscate.launch
launch/real_flight/: commu_test.launch  ctrl_bridge.launch
scripts/: connnect2x.py  dash_test.py  lemniscate.py
src/: ctrl_bridge.cpp  ctrl_bridge_node.cpp  ekf_hover_test.cpp  mavros_utils.cpp  polynomial_traj.cpp  traj_test.cpp  uav_ctrl.cpp
